[package]
name = "pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "3.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27.0", features = ["latest"] }
serde = "1.0.228"
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.101"
hmac = "0.12.1"
sha2 = "0.10.9"
